improved search bar, fixed search result overlapping problem

--- a/static/championranking.css
+++ b/static/championranking.css
@@ -66,6 +66,7 @@ body {
     display: flex;
     flex-direction: column;
     gap: 10px;
+    z-index:1000;
 }
 
 .ranking-table {
