--- a/static/champions.css
+++ b/static/champions.css
@@ -77,6 +77,7 @@ a {
     display: flex;
     flex-direction: column;
     gap: 10px;
+    z-index: 1000;
 }
 
 .champion-link {
