--- a/static/home.css
+++ b/static/home.css
@@ -75,6 +75,7 @@ a {
     display: flex;
     flex-direction: column;
     gap: 10px;
+    z-index: 1000;
 }
 
 .champion-link {
