--- a/static/updatedata.css
+++ b/static/updatedata.css
@@ -74,6 +74,7 @@ a {
     display: flex;
     flex-direction: column;
     gap: 10px;
+    z-index:1000;
 }
 
 .champion-link {
